<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BTT Recorder</string>
    <string name="import_menu">Import</string>
    <string name="settings_menu">Settings</string>
    <string name="logout_menu">Logout</string>
    <string name="help_menu">Help</string>
    <string name="project_management">Project Management</string>
    <string name="new_project">New Project</string>
    <string name="choose_target_language">Choose Target Language</string>
    <string name="choose_project">Choose a Project</string>
    <string name="choose_book">Choose a Book</string>
    <string name="choose_translation_type">Choose Translation Type</string>
    <string name="choose_mode">Choose a Mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_take">Delete take?</string>
    <string name="rate_take">Rate this take</string>
    <string name="label_take_detailed">Take <xliff:g example="1" id="current">%1$s</xliff:g> of <xliff:g example="2" id="total">%2$s</xliff:g></string>
    <string name="label_chapter_title_detailed">Chapter <xliff:g example="1. The Creation" id="chapter">%1$s</xliff:g></string>
    <string name="project">Project</string>
    <string name="uploading" translatable="false">Uploading</string>
    <string name="project_upload">Project upload</string>
    <string name="project_uploaded">Project successfully uploaded</string>
    <string name="project_upload_failed">Project upload failed: <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="upload_step_one">Step 1/3: Generating manifest file</string>
    <string name="upload_step_two">Step 2/3: Packaging files to export</string>
    <string name="upload_step_three">Step 3/3: Uploading</string>
    <string name="packaging_files">Packaging files to export</string>
    <string name="delete_project">Delete Project</string>
    <string name="confirm_delete_project_alt">Deleting this project will remove all associated verse and chunk recordings.\n\nAre you sure?</string>
    <string name="target_language">Target Language</string>
    <string name="set_chapter_level" translatable="false">Set Chapters Level</string>
    <string name="compile_chapters" translatable="false">Compile Chapters</string>
    <string name="compile_chapters_failed">Could not compile chapters\n <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="set_checking_level">Set Checking Level</string>
    <string name="warning">Warning</string>
    <string name="compile_chapters_message">Compile all units into one chapter audio?</string>
    <string name="recompile_chapters_message">Re-compiling a chapter will over-write the current audio and reset the checking level.</string>
    <string name="compiling_chapter">Compiling Chapter</string>
    <string name="importing_project">Importing Project</string>
    <string name="delete_chapter_recording">Delete Chapter Recording?</string>
    <string name="project_details_undefined">Could not define project details.</string>
    <string name="invalid_project_backup">Invalid project backup file.</string>
    <string name="source_audio">Source Audio</string>
    <string name="select_source_language">Select Source Language</string>
    <string name="select_source_location">Select Source Location</string>
    <string name="source_language_selected" comment="Do not translate variable token. Arrange the position if necessary.">Source Language: %s</string>
    <string name="source_location_selected" comment="Do not translate variable token. Arrange the position if necessary.">Source Location: %s</string>
    <string name="source_audio_not_found">Source audio could not be found in the default location. If you would like Source Audio to use with your project, please select a source language and then find the corresponding Source Audio folder on your device or SD card using the buttons below.</string>
    <string name="source_audio_location">Source Audio Location</string>
    <string name="source_audio_language">Source Audio Language</string>
    <string name="choose_source_language">Choose Source Language</string>
    <string name="app_settings">BTT Recorder Settings</string>
    <string name="source_language">Source Language</string>
    <string name="add_temp_language">Add Temporary Language</string>
    <string name="update_language_from_td">Update Languages From Url</string>
    <string name="update_language_from_file">Update Languages From File</string>
    <string name="change_languages_url">Change Languages Url</string>
    <string name="updating_languages">Updating Languages</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_restore_hint">Backup/Restore entire app data, including translations, database and preferences</string>
    <string name="restoring_backup">Restoring from backup</string>
    <string name="backup_restored">Restored from backup. The app will restart.</string>
    <string name="restoring_backup_failed">Restoring from backup failed\n <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="creating_backup">Creating backup</string>
    <string name="backup_created">Backup created</string>
    <string name="invalid_backup">Invalid backup file</string>
    <string name="migrate_old_app">Migrate from old app</string>
    <string name="migrate_old_app_hint">Migrate translations from the old app data folder</string>
    <string name="migrating_old_app">Migrating from the old app data</string>
    <string name="migrating_complete">Migration Complete!</string>
    <string name="migrating_failed">Migration Failed\n <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="app_version">BTT Recorder Version</string>
    <string name="language_code_exists">Language code already exists!</string>
    <string name="language_code_length_tip">Language code must contain exactly 6 characters!</string>
    <string name="language_name">Language name: </string>
    <string name="language_code">Language code: </string>
    <string name="add">Add</string>
    <string name="languages_updated">Languages successfully updated!</string>
    <string name="invalid_json">Invalid languages file</string>
    <string name="server_name">Server Name: </string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="lang_url">URL: </string>
    <string name="restore_defaults">Restore</string>
    <string name="save">Save</string>
    <string name="version">Version</string>
    <string name="label_skip">Skip</string>
    <string name="saving">Saving</string>
    <string name="writing_changes">Writing changes to file, please wait...</string>
    <string name="inserting_recording">Inserting recording</string>
    <string name="audio_player_error">Could not initialize the audio player</string>
    <string name="restart_device">If this issue continues, try restarting your device.</string>
    <string name="chapter_title">Chapter</string>
    <string name="part_title">Part</string>
    <string name="unit_title">Unit</string>
    <string name="chunk_title">Chunk</string>
    <string name="title_verse">Verse</string>
    <string name="files_content_desc" translatable="false">Files Button</string>
    <string name="record_content_desc" translatable="false">Record Button</string>
    <string name="folder_name" translatable="false">BTTRecorder</string>
    <string name="pref_default_lang" translatable="false">en</string>
    <string name="pref_languages_url" translatable="false">https://langnames.bibleineverylanguage.org/langnames.json</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="menu_update" translatable="false">Update</string>
    <string name="unit">Unit</string>
    <string name="translation_type">Translation Type</string>
    <string name="record_name">What is your name?</string>
    <string name="privacy">If you are concerned for your privacy or safety, please use a nickname or pseudonym</string>
    <string name="txt_record"><u>Record</u></string>
    <string name="txt_btn_redo">Redo</string>
    <string name="txt_btn_yes">Yes</string>
    <string name="new_user"><u>New User</u></string>
    <string name="available_users">Available Users</string>
    <string name="is_this_ok_txt">Is this ok?</string>
    <string name="permissions_denied_title">Permissions Needed</string>
    <string name="permissions_denied_message">Please enable permissions to use BTT Recorder</string>
    <string name="open_permissions">Open Permission Settings</string>
    <string name="project_exists">Project Already Exists!</string>
    <string name="project_exists_message">A project already exists for that language, book, and version.\nIf you would like to switch recording modes, please delete the project before creating it again.</string>
    <string name="no_source_audio">No source audio</string>
    <string name="left_title">Left</string>
    <string name="resyncing_database">Resyncing Database</string>
    <string name="exporting_source_audio">Exporting Source Audio</string>
    <string name="source_generation_complete">Source Audio generation complete.</string>
    <string name="source_generation_failed">Source Audio generation failed\n <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="project_import_complete">Project successfully imported.</string>
    <string name="project_import_failed">Project import failed\n <xliff:g example="error" id="message">%1$s</xliff:g></string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="send_crash_report_confirm">Would you like to send a crash report? Please leave a description of the error.</string>
    <string name="label_ok">OK</string>
    <string name="label_close">Close</string>
    <string name="title_cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="label_continue">Continue</string>
    <string name="label_more">More</string>
    <string name="import_project">Import Project</string>
    <string name="title_send">Send</string>
    <string name="bible">Bible</string>
    <string name="bible_stories">Bible Stories</string>
    <string name="anthology_nt">New Testament</string>
    <string name="anthology_ot">Old Testament</string>
    <string name="anthology_obs">Open Bible Stories</string>
    <string name="ulb">Unlocked Literal Bible</string>
    <string name="udb">Unlocked Dynamic Bible</string>
    <string name="reg">Regular</string>
    <string name="book_gen">Genesis</string>
    <string name="book_exo">Exodus</string>
    <string name="book_lev">Leviticus</string>
    <string name="book_num">Numbers</string>
    <string name="book_deu">Deuteronomy</string>
    <string name="book_jos">Joshua</string>
    <string name="book_jdg">Judges</string>
    <string name="book_rut">Ruth</string>
    <string name="book_1sa">1 Samuel</string>
    <string name="book_2sa">2 Samuel</string>
    <string name="book_1ki">1 Kings</string>
    <string name="book_2ki">2 Kings</string>
    <string name="book_1ch">1 Chronicles</string>
    <string name="book_2ch">2 Chronicles</string>
    <string name="book_ezr">Ezra</string>
    <string name="book_neh">Nehemiah</string>
    <string name="book_est">Esther</string>
    <string name="book_job">Job</string>
    <string name="book_psa">Psalms</string>
    <string name="book_pro">Proverbs</string>
    <string name="book_ecc">Ecclesiastes</string>
    <string name="book_sng">Song of Solomon</string>
    <string name="book_isa">Isaiah</string>
    <string name="book_jer">Jeremiah</string>
    <string name="book_lam">Lamentations</string>
    <string name="book_ezk">Ezekiel</string>
    <string name="book_dan">Daniel</string>
    <string name="book_hos">Hosea</string>
    <string name="book_jol">Joel</string>
    <string name="book_amo">Amos</string>
</resources>