<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/abc_ic_menu_overflow_material"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="More"
        >

        <menu>

            <item
                android:id="@+id/action_import"
                android:title="@string/import_menu"
                android:icon="@drawable/ic_import_black_24dp"
                android:orderInCategory="100"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/action_settings"
                android:title="@string/settings_menu"
                android:icon="@drawable/ic_settings_black_24dp"
                android:orderInCategory="200"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/action_logout"
                android:title="@string/logout_menu"
                android:icon="@drawable/ic_logout_variant_black_24dp"
                android:orderInCategory="300"
                app:showAsAction="never"
                />

            <item
                android:id="@+id/action_help"
                android:title="@string/help_menu"
                android:icon="@drawable/ic_help_black_24dp"
                android:orderInCategory="400"
                app:showAsAction="never"
                />

        </menu>

    </item>

</menu>