<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:minWidth="@dimen/dialog_min_width"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_content_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/backup_restore"
            android:layout_marginBottom="@dimen/dialog_content_margin"
            android:textColor="@color/dark_primary_text"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/close_button"
                android:text="@string/label_close"
                android:layout_marginRight="@dimen/default_padding_m"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/secondary"
                />
            <Button
                    android:id="@+id/backup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backup"
                    android:layout_marginLeft="@dimen/default_padding_m"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/secondary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore"
                android:id="@+id/restore_button"
                android:layout_marginLeft="@dimen/default_padding_m"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/secondary"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>