<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:minWidth="@dimen/dialog_min_width"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_content_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/change_languages_url"
            android:layout_marginBottom="@dimen/dialog_content_margin"
            android:textColor="@color/dark_primary_text"
            android:textSize="@dimen/abc_text_size_large_material"
            android:id="@+id/title" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/dialog_controls_margin"
                android:paddingBottom="@dimen/dialog_controls_margin"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_secondary_text"
                    android:textSize="@dimen/body"
                    android:text="@string/lang_url"
                    android:paddingRight="10dp"/>
                <EditText
                    android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_primary_text"
                    android:textSize="@dimen/body"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/close_button"
                android:text="@string/label_close"
                android:layout_marginRight="@dimen/default_padding_m"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/secondary"
                />
            <Button
                    android:id="@+id/restore_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_defaults"
                    android:layout_marginLeft="@dimen/default_padding_m"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/secondary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_marginLeft="@dimen/default_padding_m"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/secondary"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>