<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/scrollView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:padding="@dimen/default_padding_m"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_audio_not_found" android:textColor="@color/dark_primary_text"
            android:textSize="@dimen/text_size_m"
            android:layout_marginBottom="@dimen/default_padding_m"
            />

        <Button
            android:id="@+id/language_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_source_language"
            style="@style/Widget.Button.Marine"
            android:layout_marginTop="@dimen/default_padding_m"
            android:layout_marginRight="@dimen/default_padding_xs"
            android:layout_marginLeft="@dimen/default_padding_xs"
            android:elevation="@dimen/cardview_default_elevation"
            />

        <Button
            android:id="@+id/location_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_source_location"
            style="@style/Widget.Button.Marine"
            android:layout_marginTop="@dimen/default_padding_m"
            android:layout_marginRight="@dimen/default_padding_xs"
            android:layout_marginLeft="@dimen/default_padding_xs"
            android:elevation="@dimen/cardview_default_elevation"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/scrollView"
        android:gravity="end"
        android:background="@color/clear_gray"
        >

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_skip"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            style="@style/Widget.Button"
            android:textColor="@color/dark_gray"
            />

    </LinearLayout>

    <!-- default to invisible for the back press to "close" the fragment !-->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        />

</RelativeLayout>