<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/delete_confirm_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/delete_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_crash_report_confirm"
            android:layout_toEndOf="@id/delete_image"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/delete_confirm_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_confirm_header">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/crash_report" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/delete_confirm_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/delete_confirm_body">

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_send"
            android:layout_alignParentEnd="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/secondary"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cancel"
            android:layout_toStartOf="@id/send"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/secondary" />

    </RelativeLayout>

</RelativeLayout>